Add single blog

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <body>
 	<div class="container">
 	    <h1 class="my-5 text-center">Blog</h1>
+	    <!-- Ficha de articulo -->
+	    <article id="single-blog" class="d-none">
+		<h2 id="single-blog__title"></h2>
+		<div id="single-blog__content"></div>
+		<p>
+		    <button class="btn btn-primary" id="boton-volver">Volver</button>
+		</p>
+		<div id="single-blog__comments"></div>
+	    </article>
 	    <!-- Listado de artículos -->
 	    <div id="listado-articulos" class="row row-cols-1 row-cols-md-3 g-4"></div>
 	    <!-- Marcador para paginador infinito -->
@@ -27,29 +36,50 @@
 		    <div class="card-body">
 			<h5 class="card-title" id="titulo"></h5>
 			<p class="card-text" id="resumen"></p>
+			<p>
+			    <button class="btn btn-primary" id="boton-ver" data-id="">Ver</button>
+			</p>
 		    </div>
 		</div>
 	    </div>
 	</template>
 
-	<!-- | Loading | -->
-	<template id="loading">
-	    <div class="
-			d-flex
-			justify-content-center
-			align-items-center
-			w-100
-			"
-		 style="height: 50rem">
-		<div class="
-			    spinner-border
-			    text-warning
-			    "
-		     role="status"
-		>
-		    <span class="visually-hidden">Loading...</span>
+	<template id="comment-item">
+	    <article class="col">
+		<div class="card border-warning">
+		    <div class="card-body">
+			<h5 class="card-title" id="comment__title"></h5>
+			<h6 id="comment__email"></h6>
+			<p class="card-text" id="comment__body"></p>
+		    </div>
 		</div>
-	    </div>
+	    </article>
 	</template>
+
+	<!-- | Loading | -->
+	<div id="loading" class="
+		 position-fixed
+		 top-0
+		 start-0
+		 end-0
+		 bottom-0
+		 d-flex
+		 justify-content-center
+		 align-items-center
+		 vw-100
+		 vh-100
+		 d-none
+		 "
+	     style="backdrop-filter: blur(10px)"
+	>
+	    <div class="
+			spinner-border
+			text-warning
+			"
+		 role="status"
+	    >
+		<span class="visually-hidden">Loading...</span>
+	    </div>
+	</div>
     </body>
 </html>
