--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	    <article class="col">
 		<div class="card border-warning">
 		    <div class="card-body">
-			<h5 class="card-title" id="comment__title"></h5>
+			<h5 class="card-title" id="comment__name"></h5>
 			<h6 id="comment__email"></h6>
 			<p class="card-text" id="comment__body"></p>
 		    </div>
